crates/cli/tests/snapshots/snapshot_tests__pr_comment_gitlab_unrecognised_baseline.snap
---
source: crates/cli/tests/snapshot_tests.rs
expression: "baseline_pr_comment(&unrecognised_baseline_fixture(), Provider::Gitlab)"
---
<!-- fallow-id: fallow-results -->
### Fallow codebase report

**Quality gate failed**

Found **1** finding.

<details>
<summary>Dead code (1)</summary>

| Severity | Rule | Location | Description |
| --- | --- | --- | --- |
| major | `fallow/unused-export` | `src/helpers.ts`:1 | Export 'capitalize' is never imported by other modules |

</details>


Generated by fallow.

> **Baseline recognises nothing.** The baseline has no entries this command recognises. It may be a baseline saved by another command, or an empty file. Either way it suppresses nothing. Gate outcomes: failed stale-baseline.
